extras/istio/frontend-ingress.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ar-nextjs-staging
  namespace: staging
spec:
  hosts:
    - stage-ar.veiovia.com
  gateways:
    - istio-system/ingressgateway  # Assuming you're using the Istio ingress gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - stage-ar.veiovia.com
      route:
        - destination:
            host: ar-nextjs-staging.staging.svc.cluster.local
            port:
              number: 3000
      secretName: veiovia-secret-staging  # Referencing the TLS secret
  http:
    - match:
        - uri:
            prefix: "/"  # This is equivalent to pathType: ImplementationSpecific
      route:
        - destination:
            host: ar-nextjs-staging.staging.svc.cluster.local
            port:
              number: 3000
